--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,13 @@
 {
-    "name": "emmanuel/skillsphereventurescompany",
+    "name": "emmanuel/CalabrixTechcompany",
     "autoload": {
         "psr-4": {
-            "Emmanuel\\SkillSphere Ventures\\": "src/"
+            "Emmanuel\\CalabrixTech\\": "src/"
         }
     },
     "authors": [
         {
-            "name": "SkillSphere Ventures Company"
+            "name": "CalabrixTech Company"
         }
     ],
     "require": {
